apps/racknerd/wordpress/sietejoyeria/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wordpress-sietejoyeria
  namespace: wordpress-sietejoyeria
spec:
  parentRefs:
    - name: https-gateway
      namespace: public-gateway
      sectionName: raymondcollazo-https
  hostnames:
    - "sietejoyeria.raymondcollazo.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: wordpress-sietejoyeria-svc
          port: 80
